syntax = "proto3";

package log;

service log_sharing{
	rpc Get_file(filename) returns (stream content) {}
}

message filename{
	string name=1;
}

message content{
	string data=1;
}
